# fantasypl_mcp

./: .env.example  CLAUDE.md  main.py  pyproject.toml
scripts/: sync_fpl_data.py
src/fantasypl_mcp/: __init__.py  config.py  fpl_client.py  server.py
src/fantasypl_mcp/analytics/: __init__.py  fixtures.py  form.py  insights.py
src/fantasypl_mcp/database/: __init__.py  models.py  postgres.py  redis_cache.py
src/fantasypl_mcp/tools/: __init__.py  fixtures.py  players.py  team.py  transfers.py
