[project]
name = "fantasypl-mcp"
version = "0.1.0"
description = "MCP server for Fantasy Premier League data and analytics"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fantasypl_mcp"]
